legacy/differential_testing/gcc_regression/gcc_reg_cb/results/gcc482/save_st/pr66066-1.c-4.8.2-3.out.txt
pr66066-1.c:18:1: error: initializer element is not constant
 int b1 = 1 / 0;   
 ^
pr66066-1.c:19:1: error: initializer element is not constant
 int b2 = 1 / (1 / 0);  
 ^
pr66066-1.c:20:1: error: initializer element is not constant
 int b3 = 0 ? 2 : 1 / 0;  
 ^
pr66066-1.c:21:1: error: initializer element is not constant
 int b4 = 0 || 1 / 0;  
 ^
pr66066-1.c:22:1: error: initializer element is not constant
 int b5 = 0 * (1 / 0);  
 ^
pr66066-1.c:23:1: error: initializer element is not constant
 int b6 = 1 * (1 / 0);  
 ^
pr66066-1.c:24:1: error: initializer element is not constant
 int b7 = (1 / 0) * 0;  
 ^
pr66066-1.c:25:1: error: initializer element is not constant
 int b8 = (1 / 0) * 1;  
 ^
pr66066-1.c:26:1: error: initializer element is not constant
 int b9 = 1 && 1 / 0;  
 ^
pr66066-1.c:27:1: error: initializer element is not constant
 int b10 = !(1 / 0);  
 ^
pr66066-1.c:28:1: error: initializer element is not constant
 int c1 = 1 % 0;   
 ^
pr66066-1.c:29:1: error: initializer element is not constant
 int c2 = 1 / (1 % 0);  
 ^
pr66066-1.c:30:1: error: initializer element is not constant
 int c3 = 0 ? 2 : 1 % 0;  
 ^
pr66066-1.c:31:1: error: initializer element is not constant
 int c4 = 0 || 1 % 0;  
 ^
pr66066-1.c:32:1: error: initializer element is not constant
 int c5 = 0 * (1 % 0);  
 ^
pr66066-1.c:33:1: error: initializer element is not constant
 int c6 = 1 * (1 % 0);  
 ^
pr66066-1.c:34:1: error: initializer element is not constant
 int c7 = (1 % 0) * 0;  
 ^
pr66066-1.c:35:1: error: initializer element is not constant
 int c8 = (1 % 0) * 1;  
 ^
pr66066-1.c:36:1: error: initializer element is not constant
 int c9 = 1 && 1 % 0;  
 ^
pr66066-1.c:37:1: error: initializer element is not constant
 int c10 = !(1 % 0);  
 ^
